# overreact-workshop

./: README.md  pyproject.toml
diels-alder/R/: init.xyz  opt+numfreq.charges  opt+numfreq.engrad  opt+numfreq.gbw  opt+numfreq.hess  opt+numfreq.inp  opt+numfreq.opt  opt+numfreq.out  opt+numfreq.xyz  opt+numfreq_trj.xyz  optts+numfreq.out
sn2/: model.csv  model.jk  model.k
sn2/P/: opt+numfreq.charges  opt+numfreq.engrad  opt+numfreq.gbw  opt+numfreq.hess  opt+numfreq.inp  opt+numfreq.opt  opt+numfreq.out  opt+numfreq.xyz  opt+numfreq_trj.xyz
sn2/R/: opt+numfreq.charges  opt+numfreq.engrad  opt+numfreq.gbw  opt+numfreq.hess  opt+numfreq.opt  opt+numfreq.out  opt+numfreq.xyz  opt+numfreq_trj.xyz
sn2/TS/NEB-TS/: final.xyz  optts+numfreq.final.interp  optts+numfreq.inp  optts+numfreq.interp  optts+numfreq.out  optts+numfreq.xyz  optts+numfreq_MEP.allxyz  optts+numfreq_MEP_ALL_trj.xyz  optts+numfreq_MEP_trj.xyz  optts+numfreq_NEB-CI_converged.xyz  optts+numfreq_TSOpt.appr.hess  optts+numfreq_TSOpt.charges  optts+numfreq_TSOpt.gbw  optts+numfreq_TSOpt.hess  optts+numfreq_TSOpt.opt  optts+numfreq_TSOpt_IRC_B.charges  optts+numfreq_TSOpt_IRC_B.gbw  optts+numfreq_TSOpt_IRC_B.xyz  optts+numfreq_TSOpt_IRC_B_trj.xyz  optts+numfreq_TSOpt_IRC_F.charges  optts+numfreq_TSOpt_IRC_F.gbw  optts+numfreq_TSOpt_IRC_F.xyz  optts+numfreq_TSOpt_IRC_F_trj.xyz  optts+numfreq_TSOpt_IRC_Full_trj.xyz  optts+numfreq_TSOpt_trj.xyz  optts+numfreq_im0.charges  optts+numfreq_im0.gbw  optts+numfreq_im0.xyz  optts+numfreq_im1.charges  optts+numfreq_im1.gbw  optts+numfreq_im1.xyz  (+28 more)
(+45 files in other folders)
